--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -14,6 +14,7 @@
         "btoa": true,
         "d3": false,
         "download": false,
+        "domtoimage": false,
         "moment": true
     },
     "rules": {
