--- a/src/package.json
+++ b/src/package.json
@@ -20,7 +20,7 @@
     "use-instrumented-js": "mv app_instrumented app && mv classic_instrumented classic",
     "un-use-instrumented-js": "mv app app_instrumented && mv classic classic_instrumented",
     "html-coverage": "npm run rm-coverage-tmp-dirs && npm run rm-coverage && npm run instrument-js && npm run backup-js && npm run use-instrumented-js && istanbul cover npm run save-coverage && npm run un-use-instrumented-js && npm run restore-js && istanbul report --root ./coverage html && npm run rm-coverage-tmp-dirs",
-    "apidoc": "jsduck --config jsduck-cfg.json",
+    "apidoc": "./node_modules/.bin/jsdoc -c jsdoc-config.json",
     "clean": "npm run rm-coverage-tmp-dirs && npm run rm-coverage && rm -rf apidoc && rm -rf build/*"
   },
   "repository": {
@@ -32,12 +32,13 @@
   "devDependencies": {
     "eslint": "3.2.2",
     "expect.js": "0.3.1",
+    "express": "^4.14.0",
     "istanbul": "0.4.4",
+    "jsdoc": "^3.4.3",
     "mocha": "3.0.2",
     "mocha-phantomjs": "4.1.0",
+    "serve-static": "^1.11.1",
     "sinon": "1.17.7",
-    "watch": "0.19.1",
-    "express": "^4.14.0",
-    "serve-static": "^1.11.1"
+    "watch": "0.19.1"
   }
 }
