--- a/src/package.json
+++ b/src/package.json
@@ -20,7 +20,8 @@
     "use-instrumented-js": "mv app_instrumented app && mv classic_instrumented classic",
     "un-use-instrumented-js": "mv app app_instrumented && mv classic classic_instrumented",
     "html-coverage": "npm run rm-coverage-tmp-dirs && npm run rm-coverage && npm run instrument-js && npm run backup-js && npm run use-instrumented-js && istanbul cover npm run save-coverage && npm run un-use-instrumented-js && npm run restore-js && istanbul report --root ./coverage html && npm run rm-coverage-tmp-dirs",
-    "apidoc": "./node_modules/.bin/jsdoc -c jsdoc-config.json",
+    "jsdoc": "./node_modules/.bin/jsdoc -c jsdoc-config.json",
+    "jsduck": "jsduck --config jsduck-config.json",
     "clean": "npm run rm-coverage-tmp-dirs && npm run rm-coverage && rm -rf apidoc && rm -rf build/*"
   },
   "repository": {
