--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -5,7 +5,7 @@
                 "metadata-xml2json": "http://bfs-docker.intranet.terrestris.de/geonetwork/srv/ger/xml_iso19139Tojson",
                 "metadata-search": "http://bfs-docker.intranet.terrestris.de/geonetwork/srv/ger/csw?",
                 "spatial-search": "http://bfs-docker.intranet.terrestris.de/geoserver/bfs/ows",
-                "print-servlet": "http://bfs-docker.intranet.terrestris.de/bfs-printservice/print/",
+                "print-servlet": "http://smitty:8080/print/print/",
                 "irix-servlet": "http://bfs-docker.intranet.terrestris.de/irix-servlet",
                 "rodos-projects": "resources/rodos/projects.json",
                 "rodos-results": "resources/rodos/projects/",
