--- a/src/package.json
+++ b/src/package.json
@@ -5,13 +5,12 @@
   "description": "Koala WebGIS",
   "scripts": {
     "pretest": "npm run lint",
-    "karma": "./node_modules/karma/bin/karma start karma.conf.js",
-    "test": "node test/tasks/serve-and-run-tests.js",
     "lint": "eslint -c .eslintrc app/ classic/ modern/ && eslint -c test/.eslintrc test/",
     "lint-fix": "eslint --fix -c .eslintrc app/ classic/ modern/ && eslint --fix -c test/.eslintrc test/",
-    "test:watch": "watch 'npm test' app/ classic/ modern/ test/",
+    "test": "karma start karma.conf.js --single-run",
     "test:serve": "node test/tasks/serve-sourcecode.js",
-    "test:run": "node test/tasks/run-tests.js",
+    "test:watch": "npm run test:serve && karma start karma.conf.js",
+    "test:ci": "npm run test:serve && karma start karma.conf.js --browsers PhantomJS --single-run",
     "save-coverage": "mocha-phantomjs --ssl-protocol=any --ignore-ssl-errors=true --hooks ./test/phantom_hooks.js test/index.html",
     "rm-coverage": "rm -Rf coverage",
     "rm-coverage-tmp-dirs": "rm -Rf app_instrumented app_old classic_instrumented classic_old",
@@ -21,7 +20,7 @@
     "use-instrumented-js": "mv app_instrumented app && mv classic_instrumented classic",
     "un-use-instrumented-js": "mv app app_instrumented && mv classic classic_instrumented",
     "html-coverage": "npm run rm-coverage-tmp-dirs && npm run rm-coverage && npm run instrument-js && npm run backup-js && npm run use-instrumented-js && istanbul cover npm run save-coverage && npm run un-use-instrumented-js && npm run restore-js && istanbul report --root ./coverage html && npm run rm-coverage-tmp-dirs",
-    "jsdoc": "./node_modules/.bin/jsdoc -c jsdoc-config.json",
+    "jsdoc": "jsdoc -c jsdoc-config.json",
     "userdoc": "gitbook pdf ../docs/userdoc ../docs/userdoc/User-Documentation.pdf",
     "jsduck": "jsduck --config jsduck-config.json",
     "clean": "npm run rm-coverage-tmp-dirs && npm run rm-coverage && rm -rf apidoc && rm -rf build/*"
@@ -42,6 +41,7 @@
     "karma-chrome-launcher": "^2.1.1",
     "karma-coverage": "^1.1.1",
     "karma-coverage-istanbul-reporter": "^1.3.0",
+    "karma-expect": "^1.1.3",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.3",
