Introduces toolkit switch.

--- a/src/package.json
+++ b/src/package.json
@@ -7,10 +7,11 @@
     "pretest": "npm run lint",
     "lint": "eslint -c .eslintrc app/ classic/ modern/ && eslint -c test/.eslintrc test/",
     "lint-fix": "eslint --fix -c .eslintrc app/ classic/ modern/ && eslint --fix -c test/.eslintrc test/",
-    "test": "karma start karma.conf.js --single-run",
+    "test": "npm run test:classic && npm run test:modern",
+    "test:classic": "karma start karma.conf.js --single-run --toolkit classic",
+    "test:modern": "karma start karma.conf.js --toolkit modern",
     "test:serve": "node test/tasks/serve-sourcecode.js",
-    "test:watch": "npm run test:serve && karma start karma.conf.js",
-    "test:ci": "npm run test:serve && karma start karma.conf.js --browsers PhantomJS --single-run",
+    "test:watch": "karma start karma.conf.js",
     "save-coverage": "mocha-phantomjs --ssl-protocol=any --ignore-ssl-errors=true --hooks ./test/phantom_hooks.js test/index.html",
     "rm-coverage": "rm -Rf coverage",
     "rm-coverage-tmp-dirs": "rm -Rf app_instrumented app_old classic_instrumented classic_old",
