Fix test script in package.json.

--- a/src/package.json
+++ b/src/package.json
@@ -7,9 +7,9 @@
     "pretest": "npm run lint",
     "lint": "eslint -c .eslintrc app/ classic/ modern/ && eslint -c test/.eslintrc test/",
     "lint-fix": "eslint --fix -c .eslintrc app/ classic/ modern/ && eslint --fix -c test/.eslintrc test/",
-    "test": "npm run test:classic && npm run test:modern",
+    "test": "npm run test:serve & npm run test:classic && npm run test:modern",
     "test:classic": "karma start karma.conf.js --single-run --toolkit classic",
-    "test:modern": "karma start karma.conf.js --toolkit modern",
+    "test:modern": "karma start karma.conf.js --single-run --toolkit modern",
     "test:serve": "node test/tasks/serve-sourcecode.js",
     "test:watch": "karma start karma.conf.js",
     "save-coverage": "mocha-phantomjs --ssl-protocol=any --ignore-ssl-errors=true --hooks ./test/phantom_hooks.js test/index.html",
