--- a/src/package.json
+++ b/src/package.json
@@ -13,19 +13,12 @@
     "test:modern": "karma start karma.conf.js --single-run --toolkit modern",
     "test:serve": "node test/tasks/serve-sourcecode.js",
     "test:watch": "karma start karma.conf.js",
-    "save-coverage": "mocha-phantomjs --ssl-protocol=any --ignore-ssl-errors=true --hooks ./test/phantom_hooks.js test/index.html",
-    "rm-coverage": "rm -Rf coverage",
-    "rm-coverage-tmp-dirs": "rm -Rf app_instrumented app_old classic_instrumented classic_old",
-    "instrument-js": "istanbul instrument app -o app_instrumented && istanbul instrument classic -o classic_instrumented",
-    "backup-js": "mv app app_old && mv classic classic_old",
-    "restore-js": "mv app_old app && mv classic_old classic",
-    "use-instrumented-js": "mv app_instrumented app && mv classic_instrumented classic",
-    "un-use-instrumented-js": "mv app app_instrumented && mv classic classic_instrumented",
-    "html-coverage": "npm run rm-coverage-tmp-dirs && npm run rm-coverage && npm run instrument-js && npm run backup-js && npm run use-instrumented-js && istanbul cover npm run save-coverage && npm run un-use-instrumented-js && npm run restore-js && istanbul report --root ./coverage html && npm run rm-coverage-tmp-dirs",
+    "combine-coverages": "istanbul report --root coverage --dir coverage-combined",
+    "coverage-summary": "istanbul report --root coverage text-summary",
     "jsdoc": "jsdoc -c jsdoc-config.json",
     "userdoc": "gitbook pdf ../docs/userdoc ../docs/userdoc/User-Documentation.pdf",
     "jsduck": "jsduck --config jsduck-config.json",
-    "clean": "npm run rm-coverage-tmp-dirs && npm run rm-coverage && rm -rf apidoc && rm -rf build/*"
+    "clean": "rm -rf apidoc && rm -rf build/* coverage coverage-combined"
   },
   "repository": {
     "type": "git",
@@ -38,6 +31,7 @@
     "expect.js": "0.3.1",
     "express": "^4.14.0",
     "istanbul": "0.4.4",
+    "istanbul-middleware": "^0.2.2",
     "jsdoc": "^3.4.3",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.1.1",
