--- a/src/package.json
+++ b/src/package.json
@@ -29,25 +29,25 @@
   "devDependencies": {
     "eslint": "3.2.2",
     "expect.js": "0.3.1",
-    "express": "^4.14.0",
+    "express": "4.14.0",
     "istanbul": "0.4.4",
-    "istanbul-middleware": "^0.2.2",
-    "jsdoc": "^3.4.3",
-    "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.1.1",
-    "karma-coverage": "^1.1.1",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-expect": "^1.1.3",
-    "karma-firefox-launcher": "^1.0.1",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.3",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-sinon": "^1.0.5",
+    "istanbul-middleware": "0.2.2",
+    "jsdoc": "3.4.3",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.1.1",
+    "karma-coverage": "1.1.1",
+    "karma-coverage-istanbul-reporter": "1.3.0",
+    "karma-expect": "1.1.3",
+    "karma-firefox-launcher": "1.0.1",
+    "karma-mocha": "1.3.0",
+    "karma-mocha-reporter": "2.2.3",
+    "karma-phantomjs-launcher": "1.0.4",
+    "karma-sinon": "1.0.5",
     "mocha": "3.0.2",
     "mocha-phantomjs": "4.1.0",
-    "npm-run-all": "^4.0.2",
-    "serve-static": "^1.11.1",
-    "sinon": "^1.17.7",
+    "npm-run-all": "4.0.2",
+    "serve-static": "1.11.1",
+    "sinon": "1.17.7",
     "watch": "0.19.1"
   }
 }
