--- a/src/package.json
+++ b/src/package.json
@@ -47,7 +47,6 @@
     "mocha-phantomjs": "4.1.0",
     "npm-run-all": "4.0.2",
     "serve-static": "1.12.3",
-    "sinon": "2.3.5",
-    "watch": "0.19.1"
+    "sinon": "2.3.5"
   }
 }
