--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,9 @@ image: kaivolland/jdk-node7-sencha6
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
-#cache:
-# paths:
-# - node_modules/
+cache:
+  paths:
+    - node_modules/
 
 stages:
   - test
