--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ image: kaivolland/jdk-node7-sencha6
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
 cache:
   paths:
-    - src/node_modules/
+    - node_modules
 
 stages:
   - test
