--- a/src/app.json
+++ b/src/app.json
@@ -563,6 +563,7 @@
                 "lib/BasiGX/src/util/CopyClipboard.js",
                 "lib/BasiGX/src/util/CSRF.js",
                 "lib/BasiGX/src/util/Layer.js",
+                "lib/BasiGX/src/util/Geometry.js",
                 "lib/BasiGX/src/util/Map.js",
                 "lib/BasiGX/src/util/Object.js",
                 "lib/BasiGX/src/util/Url.js",
