added turf to globals

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -15,7 +15,8 @@
         "d3": false,
         "download": false,
         "moment": true,
-        "html2canvas": true
+        "html2canvas": true,
+        "turf": true
     },
     "rules": {
         "comma-dangle": 2,
