--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ before_install:
   - "unzip -n ext-6.2.0-gpl.zip"
   - "cd src"
   - "ln -s ../ext-6.2.0 ext"
-  - "/opt/Sencha/sencha app upgrade ext"
+  - "ls -hal"
+#  - "/opt/Sencha/sencha app upgrade ext"
   - "/opt/Sencha/sencha app build"
   - "npm config set shrinkwrap false"
   - "test ! -d node_modules || npm prune"
