--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,14 @@ git:
   submodules: true
 before_install:
   - "curl -L http://cdn.sencha.com/cmd/6.2.2.36/no-jre/SenchaCmd-6.2.2.36-linux-amd64.sh.zip -o SenchaCmd-6.2.2.36-linux-amd64.sh.zip"
-  - "unzip -n SenchaCmd-6.2.2.36-linux-amd64.sh.zip"
+  - "unzip -qn SenchaCmd-6.2.2.36-linux-amd64.sh.zip"
   - "./SenchaCmd-6.2.2.36-linux-amd64.sh -q -dir /opt/Sencha"
   - "curl -L http://cdn.sencha.com/ext/gpl/ext-6.2.0-gpl.zip -o ext-6.2.0-gpl.zip"
-  - "unzip -n ext-6.2.0-gpl.zip"
+  - "unzip -qn ext-6.2.0-gpl.zip"
   - "cd src"
   - "ln -s ../ext-6.2.0 ext"
-  - "ls -hal"
   - "/opt/Sencha/sencha app install --framework=ext"
-#  - "/opt/Sencha/sencha app upgrade ext"
+  - "/opt/Sencha/sencha app upgrade ../ext-6.2.0"
   - "/opt/Sencha/sencha app build"
   - "npm config set shrinkwrap false"
   - "test ! -d node_modules || npm prune"
