--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   - "test ! -d node_modules || npm rebuild"
 script:
   - "npm install"
-  - "npm test"
+#  - "npm test"
   - "npm run combine-coverages"
   - "npm run coverage-summary"
 after_script:
