changed name in package.json

--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "Koala",
+  "name": "IMIS3GIS",
   "version": "1.5.1",
   "description": "IMIS3 GIS",
   "scripts": {
