--- a/src/package.json
+++ b/src/package.json
@@ -33,6 +33,7 @@
     "istanbul": "0.4.5",
     "istanbul-middleware": "0.2.2",
     "jsdoc": "3.4.3",
+    "jsduck": "1.1.2",
     "karma": "1.7.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.1",
