--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,7 @@ before_script:
   - git submodule update --init --recursive --force
   - git clone git@gitlab.intranet.terrestris.de:libraries/ext-6.2.0.git /ext
   - cd src
+  - ln -s /ext
   - sencha app install --framework=ext
   - sencha app build
 
