Add missing BasiGX imports

--- a/src/app.json
+++ b/src/app.json
@@ -562,11 +562,15 @@
                 "lib/BasiGX/src/util/Controller.js",
                 "lib/BasiGX/src/util/CopyClipboard.js",
                 "lib/BasiGX/src/util/CSRF.js",
+                "lib/BasiGX/src/util/Filter.js",
                 "lib/BasiGX/src/util/Layer.js",
                 "lib/BasiGX/src/util/Geometry.js",
                 "lib/BasiGX/src/util/Map.js",
                 "lib/BasiGX/src/util/Object.js",
+                "lib/BasiGX/src/util/Routing.js",
+                "lib/BasiGX/src/util/SLD.js",
                 "lib/BasiGX/src/util/Url.js",
+                "lib/BasiGX/src/util/WFS.js",
                 "lib/BasiGX/src/view/button/Base.js",
                 "lib/BasiGX/src/view/button/ZoomIn.js",
                 "lib/BasiGX/src/view/button/ZoomOut.js",
