--- a/src/package.json
+++ b/src/package.json
@@ -27,28 +27,27 @@
   "author": "terrestris GmbH & Co. KG <info@terrestris.de>",
   "license": "gpl-3",
   "devDependencies": {
-    "eslint": "4.1.1",
+    "eslint": "4.12.1",
     "expect.js": "0.3.1",
-    "express": "4.15.3",
+    "express": "4.16.2",
     "istanbul": "0.4.5",
     "istanbul-middleware": "0.2.2",
-    "jsdoc": "3.4.3",
+    "jsdoc": "3.5.5",
     "jsduck": "1.1.2",
-    "karma": "1.7.0",
-    "karma-chrome-launcher": "2.2.0",
+    "karma": "1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "1.1.1",
     "karma-coverage-istanbul-reporter": "1.3.0",
     "karma-expect": "1.1.3",
     "karma-firefox-launcher": "1.0.1",
     "karma-mocha": "1.3.0",
-    "karma-mocha-reporter": "2.2.3",
-    "karma-phantomjs-launcher": "1.0.4",
+    "karma-mocha-reporter": "2.2.5",
     "karma-sinon": "1.0.5",
-    "mocha": "3.4.2",
+    "mocha": "4.0.1",
     "mocha-phantomjs": "4.1.0",
-    "npm-run-all": "4.0.2",
-    "rimraf": "2.6.1",
-    "serve-static": "1.12.3",
-    "sinon": "2.3.5"
+    "npm-run-all": "4.1.2",
+    "rimraf": "2.6.2",
+    "serve-static": "1.13.1",
+    "sinon": "4.1.2"
   }
 }
