--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 # This file is a template, and might need editing before it works on your project.
 # Official framework image. Look for the different tagged releases at:
 # https://hub.docker.com/r/library/node/tags/
-image: weboaks/node-karma-protractor-chrome
+image: hwbllmnn/sencha-chrome-docker
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
@@ -32,12 +32,8 @@ before_script:
   - git clone git@gitlab.intranet.terrestris.de:libraries/ext-6.2.0.git /ext
   - cd src
   - ln -s /ext
-  - wget -q http://cdn.sencha.com/cmd/6.2.2/no-jre/SenchaCmd-6.2.2-linux-amd64.sh.zip
-  - apt install unzip
-  - unzip wget -q SenchaCmd-6.2.2-linux-amd64.sh.zip
-  - ./SenchaCmd-6.2.2.36-linux-amd64.sh -q
-  - $HOME/bin/Sencha/Cmd/6.2.2.36/sencha app install --framework=ext
-  - $HOME/bin/Sencha/Cmd/6.2.2.36/sencha app build
+  - /root/bin/Sencha/Cmd/6.2.2.36/sencha app install --framework=ext
+  - /root/bin/Sencha/Cmd/6.2.2.36/sencha app build
 
 test:
   stage: test
