added appcontext for internal test environment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,3 +51,4 @@ deploy:
     - master@terrestris/bfs_koala
   script:
     - rsync -avzh --delete build/production/Koala/ -e ssh gitlab-ci@10.133.7.63:/home/gitlab-ci/koala/
+    - scp resources/appContextTest.json gitlab-ci@10.133.7.63:gis_client_configs/appContext.json
