--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -21,14 +21,10 @@
                 "password": "admin"
             },
             "import": {
-                "base-url": "http://localhost/geoserver/",
-                "username": "admin",
-                "password": "admingeoserver",
-                "target-workspace": "test",
-                "target-store": "test",
+                "base-url": "http://localhost/bfs-geoserver/",
+                "target-workspace": "bfs",
+                "target-store": "bfs_geodata",
                 "metadata-base-url": "http://localhost/geonetwork/",
-                "metadata-username": "admin",
-                "metadata-password": "admin"
             },
             "imis_user": {
               "imisroles": [
