--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
-  "name": "IMIS3GIS",
-  "version": "1.5.1",
+  "name": "@openbfs/imis3gis",
+  "version": "1.11.0-SNAPSHOT",
   "description": "IMIS3 GIS",
   "scripts": {
     "pretest": "npm run lint",
@@ -22,10 +22,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/OpenBfS/gis_client"
+    "url": "git+https://github.com/OpenBfS/gis_client.git"
   },
   "author": "terrestris GmbH & Co. KG <info@terrestris.de>",
-  "license": "gpl-3",
+  "license": "GPL-3.0",
   "devDependencies": {
     "eslint": "4.12.1",
     "expect.js": "0.3.1",
@@ -49,5 +49,37 @@
     "rimraf": "2.6.2",
     "serve-static": "1.13.1",
     "sinon": "4.1.2"
+  },
+  "bugs": {
+    "url": "https://github.com/OpenBfS/gis_client/issues"
+  },
+  "homepage": "https://github.com/OpenBfS/gis_client#readme",
+  "main": "app.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "expect.js": "^0.3.1",
+    "istanbul": "^0.4.5",
+    "istanbul-middleware": "^0.2.2",
+    "express": "^4.16.2",
+    "eslint": "^4.16.0",
+    "jsduck": "^1.1.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
+    "karma-expect": "^1.1.3",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-mocha": "^1.3.0",
+    "jsdoc": "^3.5.5",
+    "karma": "^2.0.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sinon": "^1.0.5",
+    "mocha-phantomjs": "^4.1.0",
+    "npm-run-all": "^4.1.2",
+    "karma-mocha-reporter": "^2.2.5",
+    "rimraf": "^2.6.2",
+    "serve-static": "^1.13.1",
+    "sinon": "^4.1.2"
   }
 }
