add viewparams when cloning layers

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -56,7 +56,8 @@
             },
             "tools": [
                 "addWmsBtn",
-                "printBtn"
+                "printBtn",
+                "cloneBtn"
             ],
             "vectorIcons": [
                 {
