--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "@openbfs/imis3gis",
-  "version": "1.11.1-SNAPSHOT",
+  "version": "1.12.0.0",
   "description": "IMIS3 GIS",
   "scripts": {
     "pretest": "npm run lint",
