--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "@openbfs/imis3gis",
-  "version": "1.12.2.0",
+  "version": "1.12.3-SNAPSHOT",
   "description": "IMIS3 GIS",
   "scripts": {
     "pretest": "npm run lint",
