reactivate select features tool

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -58,7 +58,8 @@
             "tools": [
                 "addWmsBtn",
                 "printBtn",
-                "cloneBtn"
+                "cloneBtn",
+                "selectFeaturesBtn"
             ],
             "vectorIcons": [
                 {
