by default allow editing for dev setup

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -26,7 +26,7 @@
                 "target-workspace-uri": "www.imis.bfs.de/bfs",
                 "target-store": "bfs_geodata",
                 "metadata-base-url": "http://bfs-docker/geonetwork/",
-                "allowCreateLayer": false
+                "allowCreateLayer": true
             },
             "imis_user": {
               "imisroles": [
