disable reload popup in debug mode

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -103,5 +103,6 @@
             "rodosFolderName": "RODOS-Prognosen"
         }
     },
-    "success": true
+    "success": true,
+    "debug": true
 }
