--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -21,12 +21,19 @@
                 "password": "admin"
             },
             "import": {
-                "base-url": "http://bfs-docker/ogc/",
-                "target-workspace": "bfs",
-                "target-workspace-uri": "www.imis.bfs.de/bfs",
-                "target-store": "bfs_geodata",
-                "metadata-base-url": "http://bfs-docker/geonetwork/",
-                "allowCreateLayer": true
+              "baseUrl": "http://bfs-docker/ogc/",
+              "metadataBaseUrl": "http://bfs-docker/geonetwork/",
+              "allowCreateLayer": true,
+              "ruf": {
+                "workspace": "ruf-import",
+                "namespace": "www.imis.bfs.de/ruf",
+                "datastore": "ruf"
+              },
+              "imis": {
+                "workspace": "imis-import",
+                "namespace": "www.imis.bfs.de/imis",
+                "datastore": "imis"
+              }
             },
             "imis_user": {
               "imisroles": [
