fix test datastore names

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -25,14 +25,14 @@
               "ruf": {
                 "workspace": "ruf-import",
                 "namespace": "www.imis.bfs.de/ruf",
-                "datastore": "ruf",
+                "datastore": "ruf-import",
                 "baseUrl": "http://bfs-docker/ogc/",
                 "metadataBaseUrl": "http://bfs-docker/geonetwork/"
               },
               "imis": {
                 "workspace": "imis-import",
                 "namespace": "www.imis.bfs.de/imis",
-                "datastore": "imis",
+                "datastore": "imis-import",
                 "baseUrl": "http://bfs-docker/ogc/",
                 "metadataBaseUrl": "http://bfs-docker/geonetwork/"
               }
