--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/geoext/geoext3.git
 [submodule "src/lib/d3-util"]
 	path = src/lib/d3-util
-	url = git@github.com:terrestris/d3-util.git
+	url = git@github.com:/terrestris/d3-util.git
