--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,10 @@ test:
     - npm test
     - npm run combine-coverages
     - npm run coverage-summary
+    - cd lib/d3-util
+    - npm install
+    - npm run build:dist
+    - cd ../..
 
 deploy:
   stage: deploy
