--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -109,6 +109,7 @@
             }],
             "wmsUrls": ["http://ows.terrestris.de/osm/service",
                 "http://ows.mundialis.de/services/service" ],
+            "drawLayerName": "Zeichnungen",
             "redLineLayerName": "Messungen",
             "rodosFolderName": "RODOS-Prognosen"
         }
