--- a/src/.gitignore
+++ b/src/.gitignore
@@ -15,6 +15,7 @@ sass/example/bootstrap.js
 sass/example/bootstrap.json
 classic.jsonp
 sass/example/bootstrap.jsonp
+resources/lib/geostyler-libs
 
 **/.~lock*
 **/npm-debug.log
