--- a/src/package.json
+++ b/src/package.json
@@ -27,21 +27,22 @@
   "author": "terrestris GmbH & Co. KG <info@terrestris.de>",
   "license": "GPL-3.0",
   "devDependencies": {
-    "eslint": "4.12.1",
+    "eslint": "4.16.0",
     "expect.js": "0.3.1",
     "express": "4.16.2",
     "istanbul": "0.4.5",
     "istanbul-middleware": "0.2.2",
     "jsdoc": "3.5.5",
     "jsduck": "1.1.2",
-    "karma": "1.7.1",
-    "karma-chrome-launcher": "^2.2.0",
+    "karma": "2.0.0",
+    "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.1",
     "karma-coverage-istanbul-reporter": "1.3.0",
     "karma-expect": "1.1.3",
     "karma-firefox-launcher": "1.0.1",
     "karma-mocha": "1.3.0",
     "karma-mocha-reporter": "2.2.5",
+    "karma-phantomjs-launcher": "1.0.4",
     "karma-sinon": "1.0.5",
     "mocha": "4.0.1",
     "mocha-phantomjs": "4.1.0",
@@ -59,27 +60,11 @@
     "test": "test"
   },
   "dependencies": {
-    "expect.js": "^0.3.1",
-    "istanbul": "^0.4.5",
-    "istanbul-middleware": "^0.2.2",
-    "express": "^4.16.2",
-    "eslint": "^4.16.0",
-    "jsduck": "^1.1.2",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-expect": "^1.1.3",
-    "karma-firefox-launcher": "^1.0.1",
-    "karma-mocha": "^1.3.0",
-    "jsdoc": "^3.5.5",
-    "karma": "^2.0.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-sinon": "^1.0.5",
-    "mocha-phantomjs": "^4.1.0",
-    "npm-run-all": "^4.1.2",
-    "karma-mocha-reporter": "^2.2.5",
-    "rimraf": "^2.6.2",
-    "serve-static": "^1.13.1",
-    "sinon": "^4.1.2"
+    "antd": "3.9.3",
+    "geostyler": "0.17.1",
+    "geostyler-geojson-parser": "0.4.3",
+    "geostyler-openlayers-parser": "0.18.1",
+    "react": "16.5.2",
+    "react-dom": "16.5.2"
   }
 }
