--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -31,6 +31,7 @@
         "GeoStyler": false,
         "GeoStylerGeoJsonParser": false,
         "GeoStylerOpenlayersParser": false,
+        "GeoStylerSLDParser": false,
         "React": false,
         "ReactDOM": false
     },
