--- a/src/package.json
+++ b/src/package.json
@@ -64,6 +64,7 @@
     "geostyler": "0.17.1",
     "geostyler-geojson-parser": "0.4.3",
     "geostyler-openlayers-parser": "0.18.1",
+    "geostyler-sld-parser": "0.17.2",
     "react": "16.5.2",
     "react-dom": "16.5.2"
   }
