--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,5 +54,9 @@ deploy:
   only:
     - master@terrestris/bfs_koala
   script:
+    - cd lib/d3-util
+    - npm install
+    - npm run build:dist
+    - cd ../..
     - rsync -avzh --delete build/production/Koala/ -e ssh gitlab-ci@10.133.7.82:/home/gitlab-ci/koala/
     - scp resources/appContextTest.json gitlab-ci@10.133.7.82:gis_client_configs/appContext.json
