--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "src/lib/GeoExt"]
 	path = src/lib/GeoExt
 	url = https://github.com/geoext/geoext3.git
-[submodule "src/lib/d3-util"]
+[submodule "src/resources/lib/d3-util"]
 	path = src/resources/lib/d3-util
 	url = https://github.com/terrestris/d3-util.git
